// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="toolbar   isAlignedToTop isJustifiedToStart"
>
  <ToolbarItem>
    item
  </ToolbarItem>
</div>
`;

exports[`rendering renders correctly with group and all props 1`] = `
<div
  className="toolbar isDense isNowrap isAlignedToMiddle isJustifiedToSpaceBetween"
>
  <ToolbarItem>
    item 1
  </ToolbarItem>
  <ToolbarItem>
    item 2
  </ToolbarItem>
  <ToolbarItem>
    item 3
  </ToolbarItem>
  <ToolbarGroup>
    <ToolbarItem>
      group item 1
    </ToolbarItem>
    <ToolbarItem>
      group item 2
    </ToolbarItem>
    <ToolbarItem>
      group item 3
    </ToolbarItem>
  </ToolbarGroup>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="toolbar   isAlignedToTop isJustifiedToStart"
>
  <ToolbarItem>
    item 1
  </ToolbarItem>
  <ToolbarItem>
    item 2
  </ToolbarItem>
  <ToolbarItem>
    item 3
  </ToolbarItem>
</div>
`;

exports[`rendering renders correctly with multiple children and groups 1`] = `
<div
  className="toolbar   isAlignedToTop isJustifiedToStart"
>
  <ToolbarItem>
    item 1
  </ToolbarItem>
  <ToolbarItem>
    item 2
  </ToolbarItem>
  <ToolbarItem>
    item 3
  </ToolbarItem>
  <ToolbarGroup>
    <ToolbarItem>
      group item 1
    </ToolbarItem>
    <ToolbarItem>
      group item 2
    </ToolbarItem>
    <ToolbarItem>
      group item 3
    </ToolbarItem>
  </ToolbarGroup>
</div>
`;
